# din-core

./: .claudeignore  .cursorignore  .gitignore  AGENTS.deep.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cursor/plans/: midi_device_profiles_6f38c619.plan.md
.cursor/rules/: din-core-agents.mdc  din-core-ffi-wasm.mdc  din-core-patch-registry.mdc  din-core-v2-task-workflow.mdc
.github/workflows/: ci.yml
crates/din-core/: Cargo.toml
crates/din-core/benches/: engine_render.rs
crates/din-core/src/: audio.rs  data.rs  document_v1.rs  engine.rs  graph.rs  lib.rs  notes.rs  patch.rs  registry.rs  runtime.rs  transport.rs  utils.rs
crates/din-core/tests/: core.rs
crates/din-document/: Cargo.toml
crates/din-document/src/: graph.rs  handle.rs  lib.rs  model.rs  parse.rs  report.rs  validate.rs
crates/din-document/tests/: parse_corpus.rs
crates/din-ffi/: Cargo.toml
crates/din-ffi/src/: lib.rs
crates/din-ffi/tests/: ffi.rs
crates/din-patch/: Cargo.toml
crates/din-patch/examples/: parse_canonical_patch.rs
crates/din-patch/src/: document.rs  error.rs  lib.rs  naming.rs  types.rs
crates/din-patch/tests/: compat.rs
crates/din-wasm/: Cargo.toml
crates/din-wasm/src/: din_document_wasm.rs  lib.rs
crates/din-wasm/tests/: wasm.rs
docs/: 02-parse-pipeline.md  03-validation-and-diagnostics.md  06-runtime-session.md  07-transport-sequencer-bridge.md  08-wasm-bindings.md  09-worker-message-contract.md  11-execution-profile.md  12-host-binding-profile.md  Architecture.md  README.md  ReactDinWasmGapAudit.md  ReactDinWasmImplementationRoadmap.md  RustTutorial.md  TypeScriptTutorial.md
docs/summaries/: din-core-api.md
docs_v2/: 01-dindocument-typed-model.md  04-document-handle-query.md  05-graph-view.md  06-runtime-session.md  07-transport-sequencer-bridge.md  08-wasm-bindings.md  09-worker-message-contract.md  10-cross-target-parity.md  README.md
fixtures/: canonical_patch.json
fixtures/din-document-v1/: README.md  host-binding-valid.din.json  invalid-default-scene.din.json  invalid-enum-value.din.json  invalid-execution-without-profile.din.json  invalid-host-bindings-without-profile.din.json  invalid-route-cycle.din.json  minimal.din.json  orchestrated-scene.din.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
project/: REPO_MANIFEST.json  ROUTE_CARD.json  SUMMARY.md  TEST_MATRIX.md  USERFLOW.md
project/features/: 01_patch_contract.feature.md  02-parse-pipeline.feature  02_runtime_core.feature.md  03-validation-and-diagnostics.feature  03_multi_target_exports.feature.md  04_quality_gates.feature.md  07-transport-sequencer-bridge.feature
project/user-stories/: document-handle-and-query.feature  wasm-bindings.feature  worker-model.feature
schemas/: patch.schema.json
scripts/: generate-docs.sh
v2/features/: 01-dindocument-typed-model.feature  08-wasm-bindings.feature  11-execution-profile.feature
v2/specs/: 01-overview.md  02-crate-layout.md  03-core-api.md  04-validation-and-query.md  05-runtime-transport.md  06-wasm-bindings.md  07-worker-model.md  08-errors-events-and-versioning.md  README.md
v2/tasks/: README.md
v2/user-stories/: document-model-and-input.feature  errors-events-compatibility.feature  runtime-transport-sequencer.feature  validation-and-diagnostics.feature
(+11 files in other folders)
