[workspace]
members = [
    "crates/din-core",
    "crates/din-ffi",
    "crates/din-patch",
    "crates/din-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Valentin Dubois <contact@veacks.net>"]
repository = "https://github.com/veacks/din-core"

[workspace.dependencies]
din-core = { path = "crates/din-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
wasm-bindgen = "0.2.115"
serde-wasm-bindgen = "0.6.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
