[package]
name = "din-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
din-patch = { path = "../din-patch" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
