[package]
name = "din-document"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DinDocument v1 typed model, parse, and validation for din-core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
